testsuite/tests/rename/should_fail/T5745.hs
module T5745 where

import T5745a

f :: T
f = f
