testsuite/tests/rename/should_fail/T5745.stderr

T5745.hs:5:6: error: Not in scope: type constructor or class ‘T’
